# Cmple

./: .gitignore  .gitmodules  Build-Linux-Clang.sh  Build-Linux-GCC.sh  Build-Windows-Clang.bat  Build-Windows-ClangCL.bat  Build-Windows-GCC.bat  Build-Windows-MSVC.bat  Build-Windows-x64-MinGW-CB.bat  Build-Windows-x64-VS.bat  CMakeLists.txt  Clean-Project.bat  Clean-Project.sh  Install.bat  LICENSE.txt  README.md  Specification 11.09.2021.txt  vcpkg.json
Cmple++/: Cmple++.cbp  Cmple++.depend  Cmple++.layout  Directory.h  Documentation.html  FileParser.cpp  FileParser.h  Specification 15.09.2021.txt  main.cpp
Cmple++/Cmple++ Binary Win MinGW-64/const_input/: cmple_api.cpp  cmple_engine.cpp  cmple_engine.h  glad.c  model.h  shader.cpp  sound.cpp  sound.h  sprite.cpp
Cmple++/Cmple++ Binary Win MinGW-64/const_input/shaders/: shader_default_3d.vs
Cmple++/Cmple++ Binary Win MinGW-64/input/models/: pawnW.mtl
Cmple++/Cmple++ Binary Win MinGW-64/input/scripts/: player.cpp
Cmple++/Cmple++ Source/: Cmple++.cbp  Cmple++.depend  Cmple++.layout  Directory.cpp  Directory.h  FileParser.cpp  FileParser.h  main.cpp
Cmple++/Cmple++ Source/const_input/: camera.cpp  camera.h  cmple_api.h  font.cpp  font.h  model.cpp
Cmple++/Cmple++ Source/input/scripts/: creation_code.cpp  pawn.cpp
Cmple++/Example user input/scripts/: creation_code.cpp  player.cpp
Cmple++/Internal input Win GNU GCC 64-bit/: cmple_api.cpp  cmple_api.h  font.cpp  model.cpp  sound.cpp  sprite.cpp  sprite.h
Cmple++/Internal input Win GNU GCC 64-bit/fonts/: Arial.fnt  Times_New_Roman.fnt
Cmple++/Internal input Win GNU GCC 64-bit/shaders/: shader_default_3d.fs  shader_default_text.fs  shader_default_text.vs
Cmple++/Internal input Windows GNU GCC 64-bit/: camera.h  sound.h  sprite.cpp
Cmple++/Internal input Windows GNU GCC 64-bit/GL/: glfw3dll.lib
Cmple++/Internal input Windows GNU GCC 64-bit/shaders/: shader_default_3d.fs  shader_default_3d.vs
Cmple++/Internal input Windows Visual C++ 2019 64-bit/: cmple_engine.h  main.cpp  shader.h
Cmple++/Internal input Windows Visual C++ 2019 64-bit/shaders/: shader_default_text.fs
Cmple++/const input/scripts/: camera.h  font.h  main.cpp  model.h  shader.h
Cmple++/const_input/: camera.cpp  camera.h  cmple_api.cpp  cmple_api.h  cmple_engine.cpp  cmple_engine.h  main.cpp  model.cpp  model.h  shader.cpp  shader.h  sound.cpp  sound.h  sprite.cpp  sprite.h  stb_image.h
Cmple++/const_input/shaders/: shader_default_3d.vs
Cmple++/input/: init.txt
Cmple++/input/scripts/: controll.cpp  creation_code.cpp  player.cpp
Cmple++/output/scripts/: controll.cpp
Cmple++/to_compile/: compile.bat
Cmple++/to_compile/scripts/: classes_display_2d.h  classes_display_3d.h  classes_implementation.cpp  classes_implementation.h  classes_update.h  controll.cpp  controll.h  player.cpp  player.h
Cmple++/to_compile/shaders/: shader_default_3d.fs
Core/: CMakeLists.txt
Core/Include/: Directory.h  FileParser.h  feature.h
Core/Source/: Directory.cpp  FileParser.cpp  feature.cpp  main.cpp
Docs/: Manual.md  Reference.md
Environment/GCC/: camera.cpp
Environment/MSVC/: font.cpp  font.h  model.h
Environment/MSVC/fonts/: Calibri.fnt
Example/scripts/: player.cpp
Include/: main.h
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
Source/: main.cpp
Tests/: CMakeLists.txt  Test1.cpp  Test2.cpp  Test3.cpp  Test4.cpp  Test5.cpp  Test6.cpp  test.bat
Tests/Feature/: FeatureTestFile.cpp
Tests/Test_1_Input/scripts/: A.cpp  creation_code.cpp
Tests/Test_2_Input/scripts/: A.cpp  creation_code.cpp
Tests/Test_3_Input/scripts/: A.cpp  B.cpp  creation_code.cpp
Tests/Test_4_Input/scripts/: A.cpp  creation_code.cpp
Tests/Test_5_Input/scripts/: A.cpp  B.cpp
Tests/Test_6_Input/scripts/: A.cpp  B.cpp
Tests/const_input/: cmple_api.cpp  cmple_engine.cpp  model.cpp  sound.cpp  sprite.h
Tests/const_input/GL/: glad.h
Tests/const_input/shaders/: shader_default_2d.fs
